--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -4,6 +4,10 @@
   margin: 0px;
   padding: 0px;
 }
+h1 {
+  text-align: center;
+  margin: 5px;
+}
 .box {
   width: 95%;
   height: 150px;
@@ -78,6 +82,8 @@
   }
 }  
 </style>
+
+<h1>Our menu</h1>
 <div class="row">
   <div class="box-desktop box-tablet box-mobile">
     <div class="box">
