--- a/module3_soulution/index.html
+++ b/module3_soulution/index.html
@@ -1,1 +1,19 @@
-html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  </title>
+</head>
+<body>
+
+
+  <!-- jQuery -->
+  <script src="js/jquery-3.6.4.min.ls"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
