--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-	</head>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="JS/SpeakHello.js"></script>
+  <script src="JS/SpeakGoodBye.js"></script>
+  <script src="JS/script.js"></script>
+</head>
 <body>
-	<h1>lecture 40</h1>
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
