--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -1,88 +1,39 @@
-<style>
-* {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
-h1 {
-  text-align: center;
-  margin: 5px;
-}
-.box {
-  width: 95%;
-  height: 150px;
-  background-color: grey;
-  border: 5px solid black;
-  border-radius: 10px; 
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-}
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Module 2 solution</title>
+  <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+  <h1>Our menu</h1>
+  <div class="row">
+    <div class="box-desktop box-tablet box-mobile">
+      <section class="chicken">
+        <h2>Chicken</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      </section>
+    </div>
+    <div class="box-desktop box-tablet box-mobile">
+      <section class="Beef">
+        <h2>Beef</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      </section>
+    </div>
+    <div class="box-desktop box-tablet third-box">
+      <section class="Sushi">
+        <h2>Sushi</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      </section>
+    </div>
+  </div>
+</body>
+</html>
 
-.box p{
-  color: white;
-  font-familiy: Arial, Helvetica, sans-serif;
-  font-size: 0.7em;
-  
-}
 
-.header {
-  position: absoulte;
-  top: 10px;
-  right: inherit;
-  background-color: blue;
-  padding: 10px;
-  width: 100px;
-  text-align: center;
-  color: white;
-  border: 2px solid black;
-  border-radius: 5px;
-}
-
-.row {
-  width: 100%;
-}
-
-@media (min-width: 992px) {
-  .box-desktop {
-    float: left;
-  }
-  .box-desktop {
-    width: 33.33%;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .box-mobile {
-    float: left;
-  }
-  .box-mobile {
-    width: 50%;
-    top: 5px;
-    bottom: 5px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .third-box{
-    float: left;
-  }
-  .third-box{
-    width: 100%;
-    margin: 5px;
-  }
-}
-
-@media (max-width: 767px) {
-  .box-tablet {
-    float: inherit;
-  }  
-  .box-tablet {
-    margin: 5px;
-  }
-}  
-</style>
-
+<!--
 <h1>Our menu</h1>
 <div class="row">
   <div class="box-desktop box-tablet box-mobile">
@@ -104,3 +55,4 @@ h1 {
     </div>
   </div>
 </div>
+-->
